# ejemplo-paquete

./: LICENSE  README.md  pyproject.toml
src/analisis_graficos/: __init__.py  graficos.py
